--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,8 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+
+        <script src="scripts/controllers/login.controller.js"></script>
         <!-- endbuild -->
 </body>
 </html>
