--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Next OA</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -21,7 +21,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header">
+    <div class="header" ng-if="nowPath !== '/' && nowPath === '/login'" style="display: none;">
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
@@ -52,7 +52,7 @@
     <div ng-view=""></div>
     </div>
 
-    <div class="footer">
+    <div class="footer" ng-if="nowPath !== '/' && nowPath !== '/login'" style="display: none;">
       <div class="container">
         <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
       </div>
