--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header" ng-if="nowPath !== '/' && nowPath === '/login'" style="display: none;">
+    <div class="header login-hide">
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
@@ -52,7 +52,7 @@
     <div ng-view=""></div>
     </div>
 
-    <div class="footer" ng-if="nowPath !== '/' && nowPath !== '/login'" style="display: none;">
+    <div class="footer login-hide">
       <div class="container">
         <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
       </div>
