--- a/app/index.html
+++ b/app/index.html
@@ -84,11 +84,12 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/main.js"></script>
 
-        <script src="scripts/controllers/login.controller.js"></script>
-        <!-- endbuild -->
+    <script src="scripts/controllers/login.controller.js"></script>
+    <script src="scripts/controllers/cat.controller.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
