--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
     <script src="scripts/controllers/main.js"></script>
 
     <script src="scripts/controllers/login.controller.js"></script>
+    <script src="scripts/services/login.service.js"></script>
     <script src="scripts/controllers/cat.controller.js"></script>
     <!-- endbuild -->
 </body>
