add leancloud support.

--- a/app/index.html
+++ b/app/index.html
@@ -92,5 +92,7 @@
     <script src="scripts/services/login.service.js"></script>
     <script src="scripts/controllers/cat.controller.js"></script>
     <!-- endbuild -->
+
+    <script src="//cdn1.lncld.net/static/js/2.4.0/av-min.js"></script>
 </body>
 </html>
