--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
     <script src="scripts/controllers/login.controller.js"></script>
     <script src="scripts/services/login.service.js"></script>
     <script src="scripts/controllers/cat.controller.js"></script>
+    <script src="scripts/controllers/dinner.controller.js"></script>
     <!-- endbuild -->
 
     <script src="//cdn1.lncld.net/static/js/2.4.0/av-min.js"></script>
