--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,11 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <style>
+      .login-hide{
+        display: none;
+      }
+    </style>
   </head>
   <body ng-app="nextDinnerApp">
     <!--[if lte IE 8]>
