--- a/app/index.html
+++ b/app/index.html
@@ -28,30 +28,7 @@
 
     <!-- Add your site or application content here -->
     <div class="header login-hide">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-
-            <a class="navbar-brand" href="#/">Next Dinner</a>
-          </div>
-
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <!--<li><a ng-href="#/about">About</a></li>-->
-              <!--<li><a ng-href="#/">Contact</a></li>-->
-            </ul>
-          </div>
-        </div>
-      </div>
+      <navbar-directive></navbar-directive>
     </div>
 
     <div class="container">
@@ -101,6 +78,9 @@
     <script src="scripts/services/login.service.js"></script>
     <script src="scripts/controllers/cat.controller.js"></script>
     <script src="scripts/controllers/dinner.controller.js"></script>
+
+    <script src="scripts/directives/navbar.directive.js"></script>
+
     <!-- endbuild -->
 
     <script src="//cdn1.lncld.net/static/js/2.4.0/av-min.js"></script>
