update login page.

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
       <navbar-directive></navbar-directive>
     </div>
 
-    <div class="container">
+    <div>
     <div ng-view=""></div>
     </div>
 
