--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/navbar.css">
     <!-- endbuild -->
     <style>
       .login-hide{
@@ -81,5 +82,6 @@
     <!-- endbuild -->
 
     <script src="//cdn1.lncld.net/static/js/2.4.0/av-min.js"></script>
+    <script src="scripts/assets/jquery.menu-aim.js"></script>
 </body>
 </html>
