Update view style.

--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,8 @@
       <navbar-directive></navbar-directive>
     </div>
 
-    <div>
-    <div ng-view=""></div>
+    <div class="view-box">
+      <div ng-view=""></div>
     </div>
 
     <div class="footer login-hide">
