--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/app.config.js"></script>
 
     <script src="scripts/controllers/login.controller.js"></script>
     <script src="scripts/services/login.service.js"></script>
