Add overview page.

--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
     <script src="scripts/services/login.service.js"></script>
     <script src="scripts/controllers/cat.controller.js"></script>
     <script src="scripts/controllers/dinner.controller.js"></script>
+    <script src="scripts/controllers/overview.controller.js"></script>
 
     <script src="scripts/directives/navbar.directive.js"></script>
 
