Remove the footer.

--- a/app/index.html
+++ b/app/index.html
@@ -36,11 +36,11 @@
       <div ng-view=""></div>
     </div>
 
-    <div class="footer login-hide">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div>
+    <!--<div class="footer login-hide">-->
+      <!--<div class="container">-->
+        <!--<p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>-->
+      <!--</div>-->
+    <!--</div>-->
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
